# trad_proj

./: p1_code.cpp
HW3/: CMakeLists.txt  README.md
HW3/include/: OrderBookBuffer.hpp  generic_algorithms.hpp
HW4/include/: StaticVector.hpp  constexpr_math.hpp  metaprogramming.hpp
HW4/src/: main.cpp
Phase 1/: README.md
Phase 3/: README.md  feed_parser.h  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h  sample_feed.txt
Phase 4/: CMakeLists.txt  README.md
Phase 4/include/: MarketData.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderManager.hpp  Timer.hpp  TradeLogger.hpp
Phase 4/src/: MarketData.cpp  MatchingEngine.cpp  OrderBook.cpp  OrderManager.cpp  TradeLogger.cpp  main.cpp
Phase 4/test/: test_latency.cpp
Phase 5/: OptimizedOrderBook.cpp  OptimizedOrderBook.h  OrderBook.cpp  OrderBook.h  main.cpp  plot.py
